--- a/test/index.html
+++ b/test/index.html
@@ -43,7 +43,8 @@
 		<section class="test class-handlers">
 			<h1><em>Class handler</em>.addClass() .removeClass() .toggleClass() .hasClass()</h1>
 			<div class="lab">
-				<p>Nunc nunc augue, rhoncus et luctus feugiat, pellentesque eu metus. Maecenas dapibus erat id dui aliquam, sed ullamcorper nisl pellentesque. Integer tincidunt ultrices mauris a laoreet. Praesent fringilla a dui eget iaculis. Aliquam ut ante ac nunc adipiscing facilisis ultrices ac nisi. Sed semper lorem sapien, tempus volutpat nisl pellentesque pulvinar. Pellentesque ultricies placerat purus eu gravida. Duis ac massa dolor.</p>
+				<p>Nunc nunc augue, rhoncus et luctus feugiat, pellentesque eu metus. Maecenas dapibus erat id dui aliquam, sed ullamcorper nisl pellentesque. Integer tincidunt ultrices mauris a laoreet.</p>
+				<p class="green">Praesent fringilla a dui eget iaculis. Aliquam ut ante ac nunc adipiscing facilisis ultrices ac nisi. Sed semper lorem sapien, tempus volutpat nisl pellentesque pulvinar. Pellentesque ultricies placerat purus eu gravida. Duis ac massa dolor.</p>
 			</div>
 			<div class="triggers">
 				<div class="radiogroup">
